# GameThing

./: .design  .diary  .gitignore  .plan  .swp  CMakeLists.txt  Cartographer.h  EngineProject.ogmo  Frankenweenie.csproj  Frankenweenie.sln  Game.sln  GameThing.csproj  GameThing.sln  Program.cs  README.md  engine-config  error_log.bat  imgui.ini  log.bat  profile  run.bat  todo.plan  w
Editor/Editor/: Editor.csproj  Program.cs
Engine/: Audio.cs  Camera.cs  Engine.cs  Engine.csproj  ErrorLog.cs  Logger.cs  Pooler.cs  Profiler.cs  SceneManager.cs  Sprite.cs  StateMachine.cs  Tilemap.cs
Engine/Asset/: AudioFile.cs  Content.cs  LevelParseData.cs  SceneLoader.cs  VSong.cs
Engine/Collision/: BoxCollider2D.cs  BoxTrigger2D.cs  Collider.cs  Collider2D.cs  CollisionData.cs  CollisionLayer.cs  Mover.cs
Engine/Input/: VirtualAxis.cs  VirtualAxisGamepad.cs  VirtualButton.cs  VirtualInputButton.cs
Engine/source/: Camera.cs
Frankenweenie/: Frankenweenie.csproj  Frankenweenie.sln
Frankenweenie/Engine/: Config.cs  Parameter.cs  ParticleSystem.cs  Pooler.cs  Profile.cs  Scene.cs
Frankenweenie/Game/: Game.cs  Player.cs
Game/: CollisionDesign.txt  Game.cs  Game.csproj  Game.sln  Player.cs  Program.cs  engine-config  imgui.ini  profile
Game/source/: GUI.cs
Release/: CMakeLists.txt  Release.cpp  Release.h
Runner/Runner/: Manager.cs  Program.cs  Runner.csproj
include/: app.h  backend.h  boolean.h  imgui_backend.h  input.h  keys.h  logger.h  renderer.h
include/graphics/: color.h  texture.h
include/math/: rect.h  vec2.h
research&engine-design/: particle system.txt
source/: app.cpp  logger.cpp  renderer.cpp
source/Editor/: Context.cs  EditorComponent.cs  GUI.cs  GameLayer.cs  Gizmo.cs  LevelEditor.cs
source/Engine/: Config.cs  Engine.cs  ErrorLog.cs  Scene.cs  Timer.cs
source/Game/: Camera.cs  DebugActions.cs  Factory.cs  (+11 more)
(+190 files in other folders)
